service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-website
  namespace: public-website
  labels:
    app: public-website
spec:
  type: NodePort
  selector:
    app: public-website
  ports:
    - port: 80
      name: http
