deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
spec:
  type: NodePort
  selector:
    app: landing-page
    tier: backend
  ports:
  - port: 80
    name: http
    targetPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: landing-page
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: landing-page
        tier: backend
    spec:
      containers:
        - name: landing-page
          image: gcr.io/wiresafe-project/wiresafe-landing-page
          ports:
          - name: http
            containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-page
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: wiresafe-com
spec:
  backend:
    serviceName: landing-page-service
    servicePort: 80
