public-website.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: public-website
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: public-website
  namespace: public-website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: public-website
    spec:
      containers:
      - name: public-website
        image: gcr.io/wiresafe-project/public-website:latest
        ports:
        - containerPort: 80
          name: www
        readinessProbe:
          httpGet:
            port: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: public-website
  namespace: public-website
  labels:
    app: public-website
spec:
  type: NodePort
  selector:
    app: public-website
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-website
  namespace: public-website
spec:
  rules:
  - host: wiresafe.com
    http:
      paths:
      - backend:
          serviceName: public-website
          servicePort: 80
